    LET and LET* forms.
  * fixed bug #350: bignum-printing is now more memory-efficient,
    allowing printing of very large bignums, eg. (expt 2 10000000).
    (reported by Bruno Haible)
  * fixed bug #302: better primitive-type selection for intersection
    types.
  * fixed bug #308: non-graphic characters now all have names, as
    required.  (reported by Bruno Haible)
  * bug fix: (SETF FIND-CLASS) using a FORWARD-REFERENCED-CLASS as the
    new value now works. (reported by Bruno Haible)
  * bug fix: correct canonicalization of multiple non-standard slot
    options in DEFCLASS as per AMOP 5.4.2. (reported by Bruno Haible)
  * bug fix: SB-MOP:CLASS-PROTOTYPE now signals an error if the class
    is not yet finalized, as required by AMOP. (reported by Bruno Haible)
  * bug fix: SB-MOP:ALLOCATE-INSTANCE method for instances of BUILT-IN-CLASS
    now exists, an signals an error.
  * bug fix: duplicate LOOP variable bindings now signal PROGRAM-ERROR
    during macroexpansion for non-iteration variables as well. (reported 
    by Bruno Haible for CMUCL)
  * bug fix: Cyclic structures and unprintable objects in compiler
    messages no longer cause errors. (reported by Bruno Haible)
  * bug fix: READ, READ-PRESERVING-WHITESPACE, READ-DELIMITED-LIST,
    and READ-FROM-STRING all now return a primary value of NIL if
    *READ-SUPPRESS* is true.  (reported by Bruno Haible for CMUCL)
  * bug fix: Default value of EOF-ERROR-P in READ-FROM-STRING is true.
    (reported by Bruno Haible for CMUCL)
  * bug fix: ERROR now signals a TYPE-ERROR if the arguments to ERROR
    do not designate a condition.  (reported by Bruno Haible for
    CMUCL)
  * bug fix: UNINTERN, USE-PACKAGE, IMPORT and EXPORT all signal an
    SB-EXT:NAME-CONFLICT condition (subtype of PACKAGE-ERROR) in the
    name conflict situations in CLHS 11.1.1.2.5, and provide a restart
    permitting resolution in favour of any of the conflicting symbols.
    (reported by Bruno Haible for CMUCL)