@@ -25,6 +25,9 @@ changes in sbcl-0.8.17 relative to sbcl-0.8.16:
     types.
   * fixed bug #308: non-graphic characters now all have names, as
     required.  (reported by Bruno Haible)
+  * bug fix: redefining a class with different superclasses now correctly
+    removes it from the direct-subclasses of its previous superclasses.
+    (reported by David Morse)
   * bug fix: (SETF FIND-CLASS) using a FORWARD-REFERENCED-CLASS as the
     new value now works. (reported by Bruno Haible)
   * bug fix: correct canonicalization of multiple non-standard slot
